# fxplotter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example_usage.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: Untitled.ipynb
src/fxplotter/: __init__.py  fxplotter.py
tests/: test_fxplotter.py
