[tool.poetry]
name = "fxplotter"
version = "1.0.0"
description = "A package to to import foreign exchange currency series and plot them."
authors = ["Ahmet Besiroglu"]
license = "MIT"
readme = "README.md"
documentation = 'https://fxplotter.readthedocs.io'
homepage = "https://github.com/QMSS-G5072-2022/fxplotter"
repository = "https://github.com/QMSS-G5072-2022/fxplotter"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"
plotly = "^5.11.0"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
